--- a/demo-blog/Gemfile
+++ b/demo-blog/Gemfile
@@ -19,7 +19,8 @@ gem "jbuilder"
 
 gem "bootstrap", "~> 5.3.2"
 gem "popper_js", "~> 2.11"
-gem 'sassc-rails'
+gem "sassc-rails"
+gem "bullet"
 
 # Use Active Model has_secure_password [https://guides.rubyonrails.org/active_model_basics.html#securepassword]
 # gem "bcrypt", "~> 3.1.7"
