--- a/demo-blog/Gemfile
+++ b/demo-blog/Gemfile
@@ -21,7 +21,8 @@ gem "bootstrap", "~> 5.3.2"
 gem "popper_js", "~> 2.11"
 gem "sassc-rails"
 gem "bullet"
-gem 'capybara'
+gem "capybara"
+gem "kaminari"
 
 # Use Active Model has_secure_password [https://guides.rubyonrails.org/active_model_basics.html#securepassword]
 # gem "bcrypt", "~> 3.1.7"
