--- a/demo-blog/Gemfile
+++ b/demo-blog/Gemfile
@@ -23,6 +23,7 @@ gem "sassc-rails"
 gem "bullet"
 gem "kaminari"
 gem "rails-controller-testing"
+gem "cancancan"
 
 # Use Active Model has_secure_password [https://guides.rubyonrails.org/active_model_basics.html#securepassword]
 # gem "bcrypt", "~> 3.1.7"
