set up sign_in for both html and json responses

--- a/demo-blog/Gemfile
+++ b/demo-blog/Gemfile
@@ -24,6 +24,7 @@ gem "bullet"
 gem "kaminari"
 gem "rails-controller-testing"
 gem "cancancan"
+gem "devise-jwt"
 
 # Use Active Model has_secure_password [https://guides.rubyonrails.org/active_model_basics.html#securepassword]
 # gem "bcrypt", "~> 3.1.7"
