--- a/demo-blog/spec/fixtures/users.yml
+++ b/demo-blog/spec/fixtures/users.yml
@@ -4,6 +4,7 @@ one:
   bio: "Test Bio"
   email: "fixtureuser1@demo.com"
   encrypted_password: "<%= Devise::Encryptor.digest(User, 'password123') %>"
+  role: "admin"
 
 two:
   name: "Fixture User 2"
